implement text rotation for chart axis sidebar panel, tdf#94970

Change-Id: Ifce97c437238bd1520a2122aa4027a1bcbba1e5d